<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IOU</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>

    <!-- Home Screen -->
    <string name="owe">I Owe</string>
    <string name="owed">I\'m Owed</string>
    <string name="title_activity_owe_screen">OweScreen</string>
    <string name="title_activity_owed_screen">OwedScreen</string>
    <string name="title_activity_owe_list_fragment">OweListFragment</string>

    <!-- Owe Screen -->
    <string name="owe_header">I Owe:</string>
    <string name="new_button">New</string>
    <string name="back_button">Back</string>
    <string name="new_date">New Date</string>

    <!-- Owed Screen -->
    <string name="owed_header">I\'m Owed:</string>
    <string name="money_sign">$</string>

    <!-- New Owe Screen -->
    <string name="new_owe">New Owe Record</string>
    <string name="new_owe_name_hint">Who do you owe?</string>
    <string name="new_owe_amount_hint">How much do you owe?</string>
    <string name="add_owe">Add IOU</string>
    <string name="cancel">Cancel</string>
    <string name="desc_title">Description</string>
    <string name="desc_hint">Why do you owe this? (Optional)</string>

    <!-- New Owed Screen -->
    <string name="new_owed">New Owed Record</string>
    <string name="new_owed_name_hint">Who owes you?</string>
    <string name="new_owed_amount_hint">How much are you owed?</string>
    <string name="add_owed">Add IOU</string>
    <string name="new_owed_desc_hint">Why are you owed this?</string>

    <!-- Owe Info -->
    <string name="owe_title">I Owe</string>
    <string name="owe_name">Name:</string>
    <string name="owe_amount">Amount:</string>
    <string name="owe_delete">Delete</string>
    <string name="owe_subtract">Subtract</string>
    <string name="owe_add">Add</string>
    <string name="owe_done">Done</string>
    <string name="owe_desc_prompt">For:</string>
    <string name="owe_desc">New Description</string>
    <string name="date_created_title">Date Created:</string>
    <string name="date_created">New Date</string>
    <string name="empty_desc">None</string>

    <!-- Owed Info -->
    <string name="owed_title">I\'m Owed</string>

    <!-- Menu Screen -->
    <string name="menu_new">Add New</string>
    <string name="delete_all">Delete All</string>
    <string name="about">About</string>

    <!-- IouEditFrag -->
    <string name="edit_hint">Enter amount</string>
    <string name="confirm">Confirm</string>
    <string name="edit_iou">Edit Amount</string>

    <!-- About -->
    <string name="about_title">IOU</string>
    <string name="about_content">Ever go out to dinner and get the stink eye when you ask for a split check, or even worse, they say they don\'t \"Do That\"? IOU is all about making this situation a non-issue. Be a pal, pay the whole bill, and then add an IOU for each person who now finds themself in your debt!</string>
    <string name="signature">Designed and developed by Michael Paris</string>

</resources>