<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_owed"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:id="@+id/new_owed_title" android:gravity="center" android:background="@android:color/darker_gray"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_owed_name_hint"
            android:id="@+id/new_owed_name"
            android:layout_marginTop="7dp"
            android:layout_gravity="center">
    </EditText>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_owed_amount_hint"
            android:id="@+id/new_owed_amount"
            android:layout_marginTop="7dp"
            android:inputType="numberDecimal"
            android:layout_gravity="center"/>
    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_title"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:id="@+id/new_owed_desc_title" android:gravity="center"
            android:background="@android:color/darker_gray"/>
    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_owed_desc_hint"
            android:layout_marginTop="7dp"
            android:id="@+id/new_owed_desc"
            android:layout_gravity="center" android:maxLines="3"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:id="@+id/cancel_owed_button" android:layout_gravity="center_vertical"/>
        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/add_owe"
                android:id="@+id/confirm_owed_button" android:layout_gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>