<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/row_background">
    <TextView
            android:id="@+id/owe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="5dp"
            android:textColor="@color/black"
            android:text="@string/owe_header"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/money_sign"
            android:layout_marginLeft="10dp"
            android:id="@+id/owe_money_sign" android:layout_toRightOf="@id/owe_name"
            android:layout_centerVertical="true"/>
    <TextView
            android:id="@+id/owe_amount"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/owe_money_sign"
            android:layout_marginLeft="5dp"
            android:textColor="@color/green"
            android:layout_centerVertical="true"
            android:text="@string/new_button" />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_date"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:id="@+id/owe_date_created"
            android:layout_centerVertical="true"/>

</RelativeLayout>