<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center" android:paddingLeft="10dp"
            android:paddingRight="10dp" android:paddingTop="5dp" android:paddingBottom="5dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owe_title"
                android:layout_centerInParent="true"
                android:id="@+id/owe_dialog_title" android:layout_gravity="center" android:textColor="@color/black"
                android:textSize="25sp" />
        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/owe_done_button" android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@android:drawable/ic_delete"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center" android:paddingLeft="10dp"
            android:paddingRight="10dp" android:paddingTop="5dp" android:paddingBottom="5dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owe_name"
                android:id="@+id/owe_dialog_name_title" android:layout_gravity="left|center_vertical"
                android:textColor="@color/black" android:textSize="20sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/owe_dialog_name"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical" android:textColor="@color/black" android:textSize="18sp"/>
    </RelativeLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center" android:paddingLeft="10dp"
            android:paddingRight="10dp" android:paddingBottom="5dp" android:paddingTop="5dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owe_amount"
                android:id="@+id/owe_dialog_amount_title" android:layout_alignParentLeft="true"
                android:layout_centerVertical="true" android:textColor="@color/black" android:textSize="20sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New Text"
                android:id="@+id/owe_dialog_amount" android:layout_alignParentRight="true"
                android:layout_centerVertical="true" android:textColor="@color/green" android:textSize="18sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money_sign"
                android:id="@+id/textView" android:layout_toLeftOf="@+id/owe_dialog_amount"
                android:layout_alignParentTop="false" android:layout_centerVertical="true"
                android:textColor="@color/black" android:layout_marginRight="5dp" android:textSize="18sp"/>
    </RelativeLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center" android:paddingTop="3dp"
            android:paddingBottom="3dp" android:paddingLeft="3dp" android:paddingRight="3dp"
            android:gravity="center_vertical">
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owe_delete"
                android:id="@+id/owe_delete" android:layout_weight="1"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owe_subtract"
                android:id="@+id/owe_subtract" android:layout_weight="1"/>
        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owe_add"
                android:id="@+id/owe_add" android:layout_weight="1"/>


    </LinearLayout>
</LinearLayout>