<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/home_background">
        <TextView
                android:id="@+id/owed_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="34dp"
                android:text="@string/owed_header"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
                android:id="@+id/new_owed_button"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/new_button" />
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?android:attr/buttonStyleSmall"
                android:layout_alignParentLeft="true"
                android:text="@string/back_button"
                android:id="@+id/owed_back_button"
                android:layout_centerVertical="true"/>

    </RelativeLayout>


    <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/owed_listview">
            <!--android:id="@id/android:list"-->
    </ListView>

    <TextView android:id="@id/android:empty"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:text="You're not owed anything."
            />


</LinearLayout>